--- a/WebpackReactDemo2/package.json
+++ b/WebpackReactDemo2/package.json
@@ -17,5 +17,9 @@
     "react-dom": "^15.4.2",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
+  },
+  "scripts": {
+    "dev": "./node_modules/.bin/webpack-dev-server",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
